<resources>
    <string name="app_name">MPF App</string>
    <string name="missing">Missing</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="fill_the_form">fill the form, we will share your missing person poster to all MPF users who can help you.</string>
    <string name="don_t_worry">Don\'t Worry</string>
    <string name="be_patient">Be Patient</string>
    <string name="we_are_with_you">We are with You !</string>
    <string name="fill_the_form_btn">Fill the Form</string>
    <string name="full_name_of_missing_person">Full name of missing person*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="prize_optional">Prize (optional)</string>
    <string name="dummy">Let\'s try to run your application.\n I assume you have connected your actual Android Mobile device with your computer. To run the app from android studio,\n open one of your project\'s activity files and click Run icon from the toolbar. \n Select your mobile device as an option and then check your mobile device which will display your default screen Let\'s try to run your application. I assume you have connected your actual Android Mobile device with your computer. To run the app from \n android studio, open one of your project\'s activity files and click Run \n icon from the toolbar. Select your mobile device as an option and then \n check your mobile device which will display your default screen \n Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut</string>
    <string name="log_in_text_for_already_user">have you already account? Log in <b>Here</b></string>
    <string name="Signup_text_for_new_user"><b>Sign up</b></string>

    <string name="contacts"><b>Contacts: </b></string>
    <string name="address"><b>"Address: "</b></string>
    <string name="description"><b>"Description: "</b></string>
    <string name="prize"><b>"Prize: "</b></string>
    <string name="if_you_have_forget_password_reset_it"><b>Reset</b> password</string>
    <string name="your_active_missing_person_list"> <u>Your Active Missing Person List</u> </string>
    <string name="verify">verify</string>
    <string name="your_email_is_verified">Your email is verified!   </string>
    <string name="your_email_is_not_verified">Your email is not verified!   </string>
    <string name="please_enter_your_email_address_for_geting_reset_link">Please enter your email address for getting verification link.</string>
    <string name="link_is_sent_to_your_email">Link is sent to your email</string>
    <string name="we_are_waiting_for_your_verification">We are waiting for your Verification</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">log Out</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection!</string>
    <string name="type_city_district_state_country">Type ... city, district, state, country</string>
    <string name="_2937_oliverio_drive_saint_john_67576_usa">2937 Oliverio Drive Saint John 67576 USA</string>
</resources>